--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -1,3 +1,16 @@
+@import './variables';
+
+@mixin button {
+    padding: 0.5rem 1.5rem;
+    border:none;
+    border-radius: 5px;
+    margin-right: 1rem;
+    margin-bottom: 1rem;
+    color: $white;
+    background-color: $accent-color;
+    cursor: pointer;
+}
+
 /* media queries */
 @mixin laptop {
     @media screen and (max-width: 1024px) { 
